--- a/src/modules/Authentication/Deliscio.Modules.Authentication/Deliscio.Modules.Authentication.csproj
+++ b/src/modules/Authentication/Deliscio.Modules.Authentication/Deliscio.Modules.Authentication.csproj
@@ -17,13 +17,14 @@
 	  <PackageReference Include="AspNetCore.Identity.MongoDbCore" Version="3.1.2" />
 	  <PackageReference Include="MediatR" Version="12.2.0" />
 	  <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
-	  <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="8.0.3" />
+	  <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="8.0.4" />
 	  <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
 	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
 	  <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
-	  <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.3" />
+	  <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.4" />
 	  <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
 	  <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
+	  <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="8.0.0" />
 	  <PackageReference Include="SonarAnalyzer.CSharp" Version="9.23.1.88495">
 	    <PrivateAssets>all</PrivateAssets>
 	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
