--- a/.gitignore
+++ b/.gitignore
@@ -414,4 +414,6 @@ FodyWeavers.xsd
 /src/ui/mvc/wwwroot/client/home.js
 /src/ui/mvc/wwwroot/client/no-image-found.js
 /src/ui/mvc/wwwroot/client
-/src/ui/**/wwwroot/libs/*
+/**//wwwroot/libs/*
+/src/web.admin/Deliscio.Web.Admin/wwwroot/libs
+/package-lock.json
