--- a/tests/unit/modules/Deliscio.Tests.Unit.Modules/Deliscio.Tests.Unit.Modules.csproj
+++ b/tests/unit/modules/Deliscio.Tests.Unit.Modules/Deliscio.Tests.Unit.Modules.csproj
@@ -18,7 +18,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="SonarAnalyzer.CSharp" Version="9.23.1.88495">
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="9.25.0.90414">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -37,6 +37,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\src\modules\Links\Deliscio.Modules.Links\Deliscio.Modules.Links.csproj" />
+    <ProjectReference Include="..\..\..\..\src\modules\UserProfiles\Deliscio.Modules.UserProfiles\Deliscio.Modules.UserProfiles.csproj" />
   </ItemGroup>
 
 </Project>
